# cudaforces

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  rxconfig.py  skills-lock.json
.kamal/: secrets
alembic/: env.py
alembic/versions/: 1c36d9c34623_add_problem_submission_solve.py  52a602b01910_drop_problem_llmc_file.py  f3f0ff4310bf_create_auth_tables.py
config/: deploy.yml
cudaforces/: api.py  auth.py  cudaforces.py  db.py  generate.py  judge.py  mailer.py  models.py  seed.py  settings.py  state.py  sync_catalog.py  theme.py
cudaforces/components/: __init__.py  badges.py  editor.py  header.py
cudaforces/pages/: __init__.py  index.py  problem.py  sign_in.py  submissions.py  verify.py
cudaforces/problems/: __init__.py  content.json  judge_io.h  types.py
cudaforces/problems/adamw/: harness.cu  ref.py
cudaforces/problems/argmax_reduction/: __init__.py  harness.cu  ref.py
cudaforces/problems/attention_backward/: harness.cu  ref.py
cudaforces/problems/attention_forward/: harness.cu  ref.py
cudaforces/problems/block_bitonic_sort/: harness.cu  ref.py
cudaforces/problems/breadth_first_search/: __init__.py  harness.cu  ref.py
cudaforces/problems/collision_free_scatter/: harness.cu  ref.py
cudaforces/problems/convolution_1d/: harness.cu  ref.py
docs/: deployment.md  development.md
example/: .thumbnail  CudaForces.dc.html  problems.js  support.js
reflex.lock/: package.json
tests/: conftest.py  test_auth.py  test_generate.py  test_judge.py  test_judge_gpu.py  test_problems.py  test_references.py
(+92 files in other folders)
